@@ -76,6 +76,9 @@ public:
 	virtual CViewContainer* getContainerAt (const CPoint& where, bool deep = true) const;		///< get the container at point where
 	virtual bool getViewsAt (const CPoint& where, std::list<CView*>& views, bool deep = true) const;	///< get all views at point where, top->down
 	virtual bool changeViewZOrder (CView* view, int32_t newIndex);	///< change view z order position
+
+	virtual void setAutosizingEnabled (bool state);					///< enable or disable autosizing subviews. Per default this is enabled.
+	bool getAutosizingEnabled () const { return (viewFlags & kAutosizeSubviews) ? true : false; }
 	//@}
 
 	//-----------------------------------------------------------------------------
@@ -143,6 +146,10 @@ protected:
 	virtual bool checkUpdateRect (CView* view, const CRect& rect);
 	virtual bool hitTestSubViews (const CPoint& where, const CButtonState buttons = -1);
 	VSTGUI_DEPRECATED(void drawBackToFront (CDrawContext* context, const CRect& rect);)
+
+	enum {
+		kAutosizeSubviews = 1 << (CView::kLastCViewFlag + 1)
+	};
 
 	friend class CViewIterator<true>;
 	friend class CViewIterator<false>;
