@@ -39,6 +39,8 @@
 
 #if WINDOWS
 
+#include <Windows.h>
+
 namespace VSTGUI {
 
 //-----------------------------------------------------------------------------
